--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>TabAlcohol</title>
+    <title>TADENMSS</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo&amp;display=swap">
@@ -18,7 +18,7 @@
 
 <body onmousedown="return false" onselectstart="return false">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">Página Test</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#" style="font-size: 20px;">Artículos</a></li>
@@ -31,14 +31,33 @@
     <div class="container" style="margin-top: 2.5em;">
         <div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-4 col-xxl-3">
+                    <div class="row">
+                        <div class="col" style="margin-bottom: 0.3rem;">
+                            <h1 style="font-size: 24px;">Accesos rápidos</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ul class="list-group">
+                                <li class="list-group-item"><a href="https://tadenmss.github.io/tabalcohol/articletadenmss.html">Artículo 1</a></li>
+                                <li class="list-group-item"><a href="https://www.youtube.com">Artículo 2</a></li>
+                                <li class="list-group-item"><a href="#">Artículo 3</a></li>
+                                <li class="list-group-item"><a href="#">Artículo 4</a></li>
+                                <li class="list-group-item"><a href="#">Artículo 5</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="col-md-8 col-xxl-9">
                     <h1 style="font-size: 32px;">Artículos Recientes</h1>
                     <p>Listado de artículos</p>
                     <div>
                         <div class="row">
                             <div class="col">
                                 <div class="card"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 400px;">
-                                    <div class="card-body"><a href="https://www.twitch.tv">
+                                    <div class="card-body"><a href="./articles/articlestadenmss.html">
                                             <h4>Ejemplo artículo 1</h4>
                                         </a>
                                         <p class="card-text">Descripción breve del artículo.</p>
@@ -153,24 +172,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col">
-                            <h1 style="font-size: 24px;">Accesos rápidos</h1>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col" style="margin: auto;">
-                            <ul class="list-group">
-                                <li class="list-group-item"><a href="https://www.google.com">Artículo 1</a></li>
-                                <li class="list-group-item"><a href="https://www.youtube.com">Artículo 2</a></li>
-                                <li class="list-group-item"><a href="#">Artículo 3</a></li>
-                                <li class="list-group-item"><a href="#">Artículo 4</a></li>
-                                <li class="list-group-item"><a href="#">Artículo 5</a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
