--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body onmousedown="return false" onselectstart="return false">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="./"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="https://tadenmss.github.io/tabalcohol/" style="font-size: 20px;">Artículos</a></li>
@@ -64,7 +64,7 @@
                                         <h4 class="card-title" style="text-align: center;">Acerca del proyecto</h4>
                                         <h6 class="text-muted card-subtitle mb-2" style="text-align: center;">Escuela de Nivel Medio Superior de Salvatierra</h6>
                                         <p class="card-text" style="text-align: justify;">Descripción del proyecto a desarrollar en la materia.</p>
-                                        <div><a href="#" style="margin-right: 38px;">Acerca del proyecto</a><a href="#">Documentos</a></div>
+                                        <div><a href="#" style="margin-right: 38px;">Acerca del proyecto</a><a href="./pages/mediatadenmss/mediatadenmss.html">Documentos</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                         <hr>
                         <div class="row">
                             <div class="col">
-                                <div class="card"><img class="card-img-top w-100 d-block" style="height: 400px;">
+                                <div class="card"><img class="card-img-top w-100 d-block" style="height: 400px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051647/6a42533407ec279798e116b20747221f-1000.jpg">
                                     <div class="card-body"><a href="#">
                                             <h4>Ejemplo artículo 3</h4>
                                         </a>
@@ -150,7 +150,7 @@
                         <hr>
                         <div class="row">
                             <div class="col">
-                                <div class="card"><img class="card-img-top w-100 d-block" style="height: 400px;">
+                                <div class="card"><img class="card-img-top w-100 d-block" style="height: 400px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
                                     <div class="card-body"><a href="#">
                                             <h4>Ejemplo artículo 4</h4>
                                         </a>
@@ -174,7 +174,7 @@
                         <hr>
                         <div class="row">
                             <div class="col">
-                                <div class="card"><img class="card-img-top w-100 d-block" style="height: 400px;">
+                                <div class="card"><img class="card-img-top w-100 d-block" style="height: 400px;" src="https://www.worldhistory.org/uploads/images/11260.png">
                                     <div class="card-body"><a href="#">
                                             <h4>Ejemplo artículo 5</h4>
                                         </a>
