--- a/pages/mediatadenmss/mediatadenmss.html
+++ b/pages/mediatadenmss/mediatadenmss.html
@@ -32,36 +32,36 @@
             </div>
             <div class="row" style="margin-top: 2rem;">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a>
-                        <p style="font-size: 24px;text-align: center;margin-left: 30px;margin-top: 6px;">Efectos del tabaquismo a lo largo de la edad</p>
-                    </div>
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETATE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/ETLE.pdf"><i class="fas fa-file-pdf" style="font-size: 80px;color: red;"></i></a>
-                        <p style="font-size: 24px;text-align: center;margin-left: 30px;margin-top: 6px;">La drogadicción a temprana edad</p>
-                    </div>
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/ETLE.pdf"><i class="fas fa-file-pdf" style="font-size: 80px;color: red;"></i></a>
-                        <p style="font-size: 24px;text-align: center;margin-left: 30px;margin-top: 6px;">La drogadicción a temprana edad</p>
-                    </div>
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/ETLE.pdf"><i class="fas fa-file-pdf" style="font-size: 80px;color: red;"></i></a>
-                        <p style="font-size: 24px;text-align: center;margin-left: 30px;margin-top: 6px;">Efectos del tabaquismo a lo largo de la edad</p>
-                    </div>
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/ETLE.pdf"><i class="fas fa-file-pdf" style="font-size: 80px;color: red;"></i></a>
-                        <p style="font-size: 24px;text-align: center;margin-left: 30px;margin-top: 6px;">La drogadicción a temprana edad</p>
-                    </div>
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/ETLE.pdf"><i class="fas fa-file-pdf" style="font-size: 80px;color: red;"></i></a>
-                        <p style="font-size: 24px;text-align: center;margin-left: 30px;margin-top: 6px;">La drogadicción a temprana edad</p>
-                    </div>
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
                 </div>
             </div>
         </div>
