--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>TADENMSS</title>
+    <meta name="description" content="Tabaquismo, Alcoholismo y Drogadicción - Escuela de Nivel Medio Superior de Salvatierra">
+    <meta property="og:image" content="assets/img/mstile-150x150.png">
+    <meta name="twitter:title" content="TAD ENMSS">
+    <meta name="twitter:image" content="assets/img/android-chrome-512x512.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description" content="Tabaquismo, Alcoholismo y Drogadicción - Escuela de Nivel Medio Superior de Salvatierra">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Tabaquismo, Alcoholismo y Drogadicción - Escuela de Nivel Medio Superior de Salvatierra">
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
