--- a/pages/mediatadenmss/mediatadenmss.html
+++ b/pages/mediatadenmss/mediatadenmss.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
 </head>
 
-<body>
+<body onselectstart="return false">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="https://tadenmss.github.io/tabalcohol/"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
