--- a/pages/mediatadenmss/mediatadenmss.html
+++ b/pages/mediatadenmss/mediatadenmss.html
@@ -17,11 +17,11 @@
 
 <body onselectstart="return false">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="https://tadenmss.github.io/tabalcohol/"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="https://tadenmss.github.io/tad/"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="https://tadenmss.github.io/tabalcohol/" style="font-size: 20px;">Artículos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="https://tadenmss.github.io/tabalcohol/pages/mediatadenmss/mediatadenmss.html" style="font-size: 20px;">Documentos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="https://tadenmss.github.io/tad/" style="font-size: 20px;">Artículos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="https://tadenmss.github.io/tad/pages/mediatadenmss/mediatadenmss.html" style="font-size: 20px;">Documentos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="#" style="font-size: 20px;">Acerca de nosotros</a></li>
                 </ul>
             </div>
@@ -38,34 +38,51 @@
             </div>
             <div class="row" style="margin-top: 2rem;">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETATE.pdf">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
                             <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
                         </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
                             <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
                         </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
                             <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
                         </a></div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="margin-top: 0.5rem;">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
                             <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
                         </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
                             <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
                         </a></div>
                 </div>
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tabalcohol/media/documents/ETLE.pdf">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 0.5rem;">
+                <div class="col">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
+                </div>
+                <div class="col">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                        </a></div>
+                </div>
+                <div class="col">
+                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
                             <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
                         </a></div>
                 </div>
