--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container" style="margin-top: 2.5em;">
         <div>
             <div class="row">
-                <div class="col-md-4 col-xxl-3">
+                <div class="col-md-4 col-lg-3 col-xxl-3">
                     <div>
                         <div class="row">
                             <div class="col" style="margin-bottom: 0.3rem;">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 col-xxl-9">
+                <div class="col-md-8 col-lg-9 col-xxl-9">
                     <div class="row">
                         <div class="col-xxl-12">
                             <h1 style="font-size: 32px;text-align: center;margin-top: 30px;">Artículos Recientes</h1>
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12 col-xl-6 col-xxl-6">
+                        <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6">
                             <div>
                                 <hr>
                                 <div class="row">
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-xl-6 col-xxl-6">
+                        <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6">
                             <div>
                                 <hr>
                                 <div class="row">
