--- a/pages/mediatadenmss/mediatadenmss.html
+++ b/pages/mediatadenmss/mediatadenmss.html
@@ -38,53 +38,128 @@
             </div>
             <div class="row" style="margin-top: 2rem;">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
-                </div>
-                <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
-                </div>
-                <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                            <h1 style="font-size: 24px;">Grupo 6A-ING</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row" style="margin-top: 0.5rem;">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
-                </div>
-                <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
-                </div>
-                <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                            <h1 style="font-size: 24px;">Grupo 6A-ING</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row" style="margin-top: 0.5rem;">
                 <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
-                </div>
-                <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
-                </div>
-                <div class="col">
-                    <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 80px;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
-                            <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
-                        </a></div>
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                            <h1 style="font-size: 24px;">Grupo 6A-ING</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-sm-12 col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4" style="margin-top: 10px;">
+                            <div class="d-flex"><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf" style="color: red;"><i class="fas fa-file-pdf" style="font-size: 625%;"></i></a><a href="https://tadenmss.github.io/tad/media/documents/ETATE.pdf">
+                                    <p style="font-size: 22px;text-align: center;margin-left: 30px;margin-top: 7px;">Efectos del tabaquismo y alcoholismo a través de la edad</p>
+                                </a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
