--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>TADENMSS</title>
     <meta name="description" content="Tabaquismo, Alcoholismo y Drogadicción - Escuela de Nivel Medio Superior de Salvatierra">
-    <meta property="og:image" content="assets/img/mstile-150x150.png">
+    <meta property="og:image" content="../assets/img/mstile-150x150.png">
     <meta name="twitter:title" content="TAD ENMSS">
-    <meta name="twitter:image" content="assets/img/android-chrome-512x512.png">
+    <meta name="twitter:image" content="../assets/img/android-chrome-512x512.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="Tabaquismo, Alcoholismo y Drogadicción - Escuela de Nivel Medio Superior de Salvatierra">
     <meta property="og:type" content="website">
@@ -32,11 +32,11 @@
 
 <body onselectstart="return false">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="./"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="https://tadenmss.github.io/tad/" style="font-size: 20px;">Artículos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="./pages/mediatadenmss/mediatadenmss.html" style="font-size: 20px;">Documentos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../" style="font-size: 20px;">Artículos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/mediatadenmss/mediatadenmss.html" style="font-size: 20px;">Documentos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="#" style="font-size: 20px;">Acerca de nosotros</a></li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="dropdown"><button class="btn btn-primary dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="white-space: normal;width: 100%;background: #bf8e54;">Efectos del tabaquismo y alcoholismo a través de la edad</button>
-                                        <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="./articles/articletadenmss/articletadenmss.html">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
+                                        <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="./articles/examplearticle.html">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                                         <h4 class="card-title" style="text-align: center;">Acerca del proyecto</h4>
                                         <h6 class="text-muted card-subtitle mb-2" style="text-align: center;">Escuela de Nivel Medio Superior de Salvatierra</h6>
                                         <p class="card-text" style="text-align: justify;">Descripción del proyecto a desarrollar en la materia.</p>
-                                        <div><a href="#" style="text-align: center;display: block;margin-bottom: 5px;"><small style="font-size: 18px;">Acerca del proyecto</small></a><a href="./pages/mediatadenmss/mediatadenmss.html" style="text-align: center;display: block;"><small style="font-size: 18px;">Documentos</small></a></div>
+                                        <div><a href="#" style="text-align: center;display: block;margin-bottom: 5px;"><small style="font-size: 18px;">Acerca del proyecto</small></a><a href="../pages/media.html" style="text-align: center;display: block;"><small style="font-size: 18px;">Documentos</small></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 300px;">
-                                                    <div class="card-body"><a href="./articles/articletadenmss/articletadenmss.html">
+                                                    <div class="card-body"><a href="../articles/examplearticle.html">
                                                             <h4>Ejemplo artículo 1</h4>
                                                         </a>
                                                         <p class="card-text">Descripción breve del artículo.</p>
