--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="../tad/index.html" style="font-size: 20px;">Artículos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/mediatadenmss/mediatadenmss.html" style="font-size: 20px;">Documentos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="#footer" style="font-size: 20px;">Acerca de nosotros</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 20px;">Acerca de nosotros</a></li>
                 </ul>
             </div>
         </div>
