--- a/pages/media.html
+++ b/pages/media.html
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="../" style="font-size: 20px;">Artículos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 20px;">Documentos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="#" style="font-size: 20px;">Acerca de nosotros</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/about.html" style="font-size: 20px;">Acerca de nosotros</a></li>
                 </ul>
             </div>
         </div>
@@ -180,6 +180,24 @@
             </div>
         </div>
     </div>
+    <footer class="text-center py-4" onselectstart="return false">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-lg-3">
+                <div class="col">
+                    <p class="text-muted my-2">Tabaquismo, Alcoholismo y Drogadicción ENMSS</p>
+                </div>
+                <div class="col">
+                    <ul class="list-inline my-2">
+                        <li class="list-inline-item"><a class="link-secondary" href="#">Escuela de Nivel Medio Superior de Salvatierra</a></li>
+                        <li class="list-inline-item"><a class="link-secondary" href="#">WIP</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <p class="text-muted my-2">Copyright&nbsp;© 2023 Brand</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/pagination.js"></script>
 </body>
